// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array.coffee 1`] = `
[
  a b
  c d
]

[a(bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb), c(ddddddddddddddddddddddddddddddddddddddd)]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[a(b), c d]

[
  a bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  c ddddddddddddddddddddddddddddddddddddddd
]

`;

exports[`existence.coffee 1`] = `
a(b)?
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a(b)?

`;

exports[`for-when.coffee 1`] = `
for a in b when c d
  e

e for a in b when c d

for a in b when c dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
  e

for a in b when c d by -1
  e
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
for a in b when c d
  e

e for a in b when c d

for a in b when (
  c dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
)
  e

for a in b by -1 when c d
  e

`;

exports[`implicit-object-arg-followed-by-indent.coffee 1`] = `
if a b: ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
  d
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
if a(
  b: ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
)
  d

`;

exports[`index.coffee 1`] = `
a[b c]

@_list[getId node]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a[b c]

@_list[getId node]

`;

exports[`last-object-property.coffee 1`] = `
[
  code: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.join '\\n'
,
  b
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  code: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.join '\\n'
,
  b
]

`;

exports[`postfix-if.coffee 1`] = `
g {
  a: b
  c: d
} if e

return g {
  a: b
  c: d
} if e
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
g(
  a: b
  c: d
) if e

return g(
  a: b
  c: d
) if e

`;

exports[`switch-case-condition.coffee 1`] = `
switch
  when b c
    d

switch
  when b c then d

switch
  when b(c if e)
    d

switch
  when b(c if e) then d

switch
  when (b(c) if e)
    d

switch
  when (b(c) if e) then d

switch
  when (if b then e)
    d

switch
  when (if b then e) then d
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
switch
  when b c
    d

switch
  when b c then d

switch
  when b(c if e)
    d

switch
  when b(c if e) then d

switch
  when (b c if e)
    d

switch
  when (b c if e) then d

switch
  when (if b then e)
    d

switch
  when (if b then e) then d

`;

exports[`trailing-call-in-condition.coffee 1`] = `
if a((b) ->
  c
  d
)
  e

e if a((b) ->
  c
  d
)

while a((b) ->
  c
  d
)
  e

e while a((b) ->
  c
  d
)

for f in a((b) ->
  c
  d
)
  e

e for f in a((b) ->
  c
  d
)

switch a((b) ->
  c
  d
)
  when e then f

class A extends a((b) ->
  c
  d
)
  e: 1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
if a((b) ->
  c
  d
)
  e

e if a (b) ->
  c
  d

while a((b) ->
  c
  d
)
  e

e while a (b) ->
  c
  d

for f in a((b) ->
  c
  d
)
  e

e for f in a (b) ->
  c
  d

switch a((b) ->
  c
  d
)
  when e then f

class A extends a((b) ->
  c
  d
)
  e: 1

`;
